# QtPractices

./: .gitignore  LICENSE  README.md
QML/hello/hello/: CMakeLists.txt  Main.qml  main.cpp
QML/tutorial/tutorial/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  Main.qml  main.cpp
QML/tutorial2/tutorial2/: CMakeLists.txt  Cell.qml  Main.qml  main.cpp
TcpClientExample/TcpClientExample/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
TcpPrac/TcpPrac/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Request.cpp  Request.h
TcpServerExample/TcpServerExample/: CMakeLists.txt  MyTask.cpp  MyTask.h  MyTcpServer.cpp  MyTcpServer.h  main.cpp
