cmake_minimum_required(VERSION 3.16)

project(hello VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.5 REQUIRED COMPONENTS Quick)

qt_standard_project_setup(REQUIRES 6.5)

qt_add_executable(apphello
    main.cpp
)

qt_add_qml_module(apphello
    URI hello
    VERSION 1.0
    QML_FILES Main.qml
)

set_target_properties(apphello PROPERTIES
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(apphello
    PRIVATE Qt6::Quick
)

install(TARGETS apphello
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
